# dbsync-api/src/types/proposal.ts
@@ -1,0 +1,2 @@
+export type ProposalTypes = 'ParameterChange'| 'HardForkInitiation'| 'TreasuryWithdrawals'| 'NoConfidence'| 'NewCommittee'| 'NewConstitution'| 'InfoAction'
+export type SortTypes = 'CreatedDate'|'ExpiryDate'
